--- a/nextjs-frontend/styles/Editor.module.css
+++ b/nextjs-frontend/styles/Editor.module.css
@@ -85,7 +85,7 @@
 }
 
 .highlighted {
-  background-color: yellow;
+  background-color: rgb(170, 170, 49);
   text-decoration: underline;
 }
 
